--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,29 @@
 # See https://www.dartlang.org/guides/libraries/private-files
+# Miscellaneous
+*.class
+*.log
+*.pyc
+*.swp
+.DS_Store
+.atom/
+.buildlog/
+.history
+.svn/
+migrate_working_dir/
+
+# IntelliJ related
+*.iml
+*.ipr
+*.iws
+.idea/
 
 # Files and directories created by pub
 .dart_tool/
 .packages
 build/
+**/ios/Flutter/.last_build_id
+.pub-cache/
+.pub/
 # If you're building an application, you may want to check-in your pubspec.lock
 pubspec.lock
 
@@ -25,3 +45,14 @@ doc/api/
 
 .flutter-plugins
 .flutter-plugins-dependencies
+
+# Symbolication related
+app.*.symbols
+
+# Obfuscation related
+app.*.map.json
+
+# Android Studio will place build artifacts here
+/android/app/debug
+/android/app/profile
+/android/app/release
